# Better-Bus-Master

./: README.md  main.py  pyproject.toml
app/backend/model/: model_node.py
app/frontend/: package-lock.json  package.json  rollup.config.js
app/frontend/src/: App.svelte  global.css  main.js
app/frontend/src/utils/: socket.js
docs/: todo.md
utils/: autobuild.py  read_yaml.py
